# build_example

./: README.md
cmake/: CMakeLists.txt  hello.cpp  main.cpp  print.cpp
cmake/include/loader/: loader.h
cmake/include/printer/: printer.h
cmake/src/: loader.cpp
cmake/src/loader/: loader.cpp
cmake/src/printer/: printer.cpp
cmake2/: CMakeLists.txt  README.md
cmake2/src/loader/: CMakeLists.txt  loader.cpp
cmake2/src/printer/: printer.cpp
cmake2/test/hello/: CMakeLists.txt  main.cpp
cmake2/test/main/: CMakeLists.txt  main.cpp
make/: .gitignore  Makefile
make/include/adder/: adder.h
make/include/loader/: loader.h
make/src/: loader.cpp
make/src/adder/: adder.cpp
make/src/loader/: loader.cpp
make/text/: kernel.txt  kernel.txt.h
setuptools/: Makefile  main.py  setup.py
setuptools/testmodule/: __init__.py  example.py  wrapper.pyx
setuptools/testmodule/include/: example.h
setuptools/testmodule/src/: example.c
